--- a/src/sass/components/_works-list.scss
+++ b/src/sass/components/_works-list.scss
@@ -9,6 +9,7 @@
   margin: 0 0 3em 0;
   overflow: hidden;
   border-radius: 0.5em;
+  box-shadow: 0.1rem 0.1rem 0.5rem $gray-light;
   &__cover {
     flex: 0 0 40%;
     img {
@@ -30,5 +31,5 @@
       padding: 2em 1.5em;
     }
   }
-  @include dropShadow($gray-light);
+  // @include dropShadow($gray-light);
 }
