--- a/src/sass/pages/_index.scss
+++ b/src/sass/pages/_index.scss
@@ -1,5 +1,7 @@
 .about {
   padding: 6em 0;
+  width: 100%;
+  overflow-x: hidden;
   &__container {
     display: flex;
     flex-direction: column;
@@ -47,6 +49,7 @@
     }
     @include atMedium {
       min-height: 12rem;
+      padding: 0;
     }
   }
   &__description {
@@ -108,6 +111,7 @@
       float: right;
       @include atMedium {
         float: none;
+        margin: 1em auto auto auto;
       }
     }
   }
@@ -203,6 +207,9 @@
     @include atLarge {
       padding: 6em 0;
     }
+    @include atMedium {
+      padding: 1.5em 0;
+    }
     @include atSmall {
       padding: 0;
     }
@@ -261,7 +268,7 @@
     color: $white;
     font-size: 2rem;
     text-align: right;
-    @include dropShadow($gray);
+    filter: drop-shadow(0.15rem 0.15rem 0.25rem $gray);
     @include atSmall {
       font-size: 1.5rem;
     }
@@ -277,6 +284,7 @@
 }
 
 .swiper-container {
+  width: 100%;
   @include atMedium {
     height: 50vh;
   }
